--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "bignumber.js": "^9.0.0",
-    "buffer": "^6.0.3",
+    "bip39": "^3.1.0",
     "blake2b": "2.1.3",
+    "buffer": "^6.0.3",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
