--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.6.6",
     "bignumber.js": "^9.0.0",
     "bip39": "^3.1.0",
     "blake2b": "2.1.3",
